[package]
name = "qsgmii-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9"
log = "0.4"
nom = "7"

png = "0.17"
wgpu = "0.13.1"
bytemuck = { version = "1.4", features = ["derive"] }
winit = "0.26"
